<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    android:focusable="true"
    android:clickable="true"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/foto_user"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_sem_foto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/foto_do_usuario" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="@string/username"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foto_user"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nome_repositorio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        style="?textAppearanceBody1"
        android:textColor="@color/colorAccent"
        android:text="@string/meu_repositorio"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/container_usuario"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/descricao_repositorio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/descricao_de_um_repositorio"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/nome_repositorio"
        app:layout_constraintEnd_toStartOf="@id/container_usuario"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/icon_branches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/descricao_repositorio"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_info_branches"
        android:contentDescription="@string/icone_de_branches" />

    <TextView
        android:id="@+id/info_branches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/info_text_color"
        app:layout_constraintTop_toTopOf="@id/icon_branches"
        app:layout_constraintStart_toEndOf="@id/icon_branches"
        app:layout_constraintBottom_toBottomOf="@id/icon_branches"
        android:text="@string/quantidade_xml"/>

    <ImageView
        android:id="@+id/icon_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toBottomOf="@id/descricao_repositorio"
        app:layout_constraintStart_toEndOf="@id/info_branches"
        android:src="@drawable/ic_info_favoritos"
        android:contentDescription="@string/icone_de_favoritos" />

    <TextView
        android:id="@+id/info_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/info_text_color"
        app:layout_constraintTop_toTopOf="@id/icon_favoritos"
        app:layout_constraintStart_toEndOf="@id/icon_favoritos"
        app:layout_constraintBottom_toBottomOf="@id/icon_favoritos"
        android:text="@string/quantidade_xml"/>
</androidx.constraintlayout.widget.ConstraintLayout>